--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/Valloric/YouCompleteMe.git
 [submodule "bundle/vdebug"]
 	path = bundle/vdebug
-	url = git@github.com:joonty/vdebug.git
+	url = https://github.com/joonty/vdebug.git
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
-	url = git@github.com:kien/ctrlp.vim.git
+	url = https://github.com/kien/ctrlp.vim.git
